feat(Position): update docs
- bugfix erroneous delcarations of `validator` to `Validator`, this allows
  scribe to parse the validation rules
